--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -109,8 +109,11 @@
           <div class="collapse" id="accounts">
             <ul class="nav nav-collapse">
               <li routerLinkActive="active">
-                <a [routerLink]="['/fee-list']" routerLinkActive="active">
-                  <span class="sub-item">Fees</span>
+                <a >
+                  <span class="sub-item">Journal</span>
+                </a>
+                <a >
+                  <span class="sub-item">Balance Sheet</span>
                 </a>
               </li>
             </ul>
