--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -100,7 +100,8 @@
           </div>
         </li>
 
-        <li class="nav-item" routerLinkActive="active">
+
+        <li *ngIf="(authService.getRole() | async) !== UserRole.ROLE_ADMIN" class="nav-item" routerLinkActive="active">
           <a data-bs-toggle="collapse" href="#accounts">
             <i class="fas fa-piggy-bank"></i>
             <p>Accounts</p>
