--- a/src/app/academy/student/student-list/student-list.component.html
+++ b/src/app/academy/student/student-list/student-list.component.html
@@ -1,5 +1,15 @@
 <div class="row">
   <div class="col-md-12 mb-2">
+    <div class="pull-left">
+      <div class="form-group">
+        <input
+          type="text"
+          class="form-control"
+          [(ngModel)]="searchTerm"
+          placeholder="Filter..."
+        />
+      </div>
+    </div>
     <div class="pull-right">
       <button class="btn btn-success" [routerLink]="['/student-form']">
         <i class="fa fa-plus"></i> Add New
@@ -26,7 +36,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let student of students; let i = index;">
+            <tr *ngFor="let student of filteredStudents(); let i = index;">
               <td>{{ i + 1 }}</td>
               <td>{{ student.idNo || '-' }}</td>
               <td>{{ student.name || '-' }}</td>
