--- a/src/app/academy/examination/examination-marks-entry/examination-marks-entry.component.html
+++ b/src/app/academy/examination/examination-marks-entry/examination-marks-entry.component.html
@@ -15,7 +15,10 @@
             <option value="">-- Select a course --</option>
             <option *ngFor="let course of courses" [value]="course.id">{{ course.name }}</option>
           </select>
+          <br><br>
+          <button class="btn btn-success pull-right" (click)="processExamination()">Process Result</button>
         </div>
+
       </div>
     </div>
   </div>
@@ -36,6 +39,7 @@
               <th>Sessional Type</th>
               <th>Sessional Marks</th>
               <th>Total</th>
+              <th>GPA</th>
               <th>Grade</th>
               <th>Status</th>
             </tr>
@@ -69,6 +73,7 @@
                 {{ mark.totalMark }}
                 <div *ngIf="markErrors.has(mark.id)" class="text-danger">Total marks cannot exceed 100</div>
               </td>
+              <td>{{ mark.gpa }}</td>
               <td>{{ mark.grade }}</td>
               <td>{{ mark.status }}</td>
             </tr>
