--- a/src/app/academy/student/student-list/student-list.component.html
+++ b/src/app/academy/student/student-list/student-list.component.html
@@ -93,8 +93,8 @@
         <thead>
         <tr>
           <th>Type</th>
-          <th>Amount</th>
-          <th>Paid</th>
+          <th>Due Amount</th>
+          <th>Paid Amount</th>
         </tr>
         </thead>
         <tbody>
