Journal and Balance Sheet

--- a/src/app/academy/student/student-list/student-list.component.html
+++ b/src/app/academy/student/student-list/student-list.component.html
@@ -127,7 +127,8 @@
         </tr>
         </tbody>
       </table>
-      <button type="button" class="ms-2 btn btn-success" (click)="modal.close()">Pay</button>
+      <br>
+      <button type="button" class="ms-2 btn btn-success pull-right" (click)="modal.close()">Pay</button>
     </form>
   </div>
   <div class="modal-footer">
