--- a/src/app/template/header/header.component.html
+++ b/src/app/template/header/header.component.html
@@ -32,7 +32,7 @@
       <nav
         class="navbar navbar-header-left navbar-expand-lg navbar-form nav-search p-0 d-none d-lg-flex"
       >
-        <div class="input-group">
+        <!--<div class="input-group">
           <div class="input-group-prepend">
             <button class="btn btn-search pe-1" type="submit">
               <i class="fa fa-search search-icon"></i>
@@ -43,11 +43,14 @@
             placeholder="Search ..."
             type="text"
           />
+        </div>-->
+        <div *ngIf="authService.getUniversityName() as universityName">
+          {{ universityName }}
         </div>
       </nav>
 
       <ul class="navbar-nav topbar-nav ms-md-auto align-items-center">
-        <li
+        <!--<li
           class="nav-item topbar-icon dropdown hidden-caret d-flex d-lg-none"
         >
           <a
@@ -318,7 +321,7 @@
               </div>
             </div>
           </div>
-        </li>
+        </li>-->
 
         <li class="nav-item topbar-user dropdown hidden-caret">
           <a
