--- a/src/app/academy/examination/examination-result-view/examination-result-view.component.html
+++ b/src/app/academy/examination/examination-result-view/examination-result-view.component.html
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-md-12">
     <div class="card">
@@ -20,7 +19,16 @@
               <td>{{ result.student.name || '-' }}</td>
               <td>{{ result.cgpa || '-' }}</td>
               <td>{{ result.grade || '-' }}</td>
-              <td>{{ result.status || '-' }}</td>
+              <ng-container *ngIf="result.status === 'Passed'; else failed">
+                <td>
+                  <div class="badge badge-success">{{ result.status || '-' }}</div>
+                </td>
+              </ng-container>
+              <ng-template #failed>
+                <td>
+                  <div class="badge badge-danger">{{ result.status || '-' }}</div>
+                </td>
+              </ng-template>
             </tr>
             </tbody>
           </table>
@@ -29,4 +37,3 @@
     </div>
   </div>
 </div>
-
