--- a/src/app/accounting/balance-sheet/balance-sheet.component.html
+++ b/src/app/accounting/balance-sheet/balance-sheet.component.html
@@ -1,9 +1,18 @@
 <div class="row">
+  <div class="col-md-12 mb-2">
+    <div class="pull-right">
+      <button class="btn btn-success" (click)="generatePDF()">
+        <i class="fa fa-download"></i> Download PDF
+      </button>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-md-12">
     <div class="card">
       <div class="card-body">
         <div class="table-responsive">
-          <table class="display table table-striped table-hover">
+          <table class="display table table-striped table-hover" id="balance-sheet">
             <thead>
             <tr>
               <th>
