--- a/src/app/accounting/journal/journal.component.html
+++ b/src/app/accounting/journal/journal.component.html
@@ -1,4 +1,13 @@
 <div class="row">
+  <div class="col-md-12 mb-2">
+    <div class="pull-right">
+      <button class="btn btn-success" (click)="generatePDF()">
+        <i class="fa fa-download"></i> Download PDF
+      </button>
+    </div>
+  </div>
+</div>
+<div class="row">
   <div class="col-md-12">
     <div class="card">
       <div class="card-body">
@@ -6,7 +15,7 @@
           <p>No journal entries found.</p>
         </div>
         <div *ngIf="journalEntries.length > 0" class="table-responsive">
-          <table class="display table table-striped table-hover">
+          <table class="display table table-striped table-hover" id="journal-entries">
             <thead>
             <tr>
               <th>Date</th>
